[project]
name = "rs1090"
requires-python = ">=3.10"
readme = "readme.md"
license = "MIT"
dependencies = ["typing_extensions>=4.10.0"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/xoolive/jet1090"

[tool.maturin]
module-name = "rs1090._rust"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pandas>=2.2.0", "pip", "pyarrow>=22.0.0", "pytest>=8.0.2", "ruff>=0.3.0", "ty>=0.0.21"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.pytest.ini_options]
addopts = "--log-level=INFO --color=yes"

[build-system]
requires = ["maturin==1.12.6"]
build-backend = "maturin"
