[package]
name = "decode1090"
description = "Companion application to rs1090 to decode Mode S and ADS-B signals"
repository = "https://github.com/xoolive/jet1090"
keywords = ["aircraft", "ADS-B", "Mode-S", "decoding"]
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4.5.56", features = ["color", "derive", "wrap_help"] }
deku = "0.20.3"
flate2 = "1.1"
futures-util = "0.3.32"
glob = "0.3"
hex = "0.4.3"
rs1090 = { version = "0.5.1", path = "../rs1090" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sevenz-rust = "0.6"
tokio = { version = "1.49.0", features = ["full"] }

[[bin]]
name = "decode1090"
path = "src/main.rs"
